kubernetes/ingress/external-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: myapp-external-service
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 35010
